# TEZ-operator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ANALYSIS_NODE_OVERVIEW.md  CHAIN_ANALYSIS_SUMMARY.md  CODEBASE_MAP.md  DATA_FLOW_ANALYSIS.md  Dockerfile  LICENSE  README.md  WAITLOGIN_CANCELLABLE_DESIGN.md  docker-compose.yml  presentation.html  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.kimi/: shared_memory.md
.kimi/code-context/: api_surface.md  call_chains.md  class_index.md  module_deps.md
.kimi/code-graph/: classes_tez-operator.plantuml  packages_tez-operator.plantuml
.playwright-cli/: page-2026-06-18T03-11-57-791Z.yml  page-2026-06-18T03-12-26-901Z.yml  page-2026-06-18T03-12-54-115Z.yml  page-2026-06-18T08-42-42-464Z.yml  page-2026-06-18T08-43-00-937Z.yml  page-2026-06-18T08-43-30-734Z.yml  page-2026-06-18T08-43-52-050Z.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_default_timestamps.py  172c4918f1b4_add_yunxiao_host_and_inventory_tables.py
app/: __init__.py  config.py  deps.py  main.py  scheduler.py
app/clients/: __init__.py  base.py  base_browser.py  browser_session.py  ccdb.py  ccdb_browser.py  ccdb_mock.py  cmdb.py  cmdb_browser.py  cmdb_mock.py  idcrm.py  idcrm_browser.py  idcrm_http.py  idcrm_mock.py  tcum.py  tcum_browser.py  tcum_http.py  tcum_mock.py  yunxiao.py  yunxiao_api.py  yunxiao_browser.py  yunxiao_mock.py
app/core/: __init__.py  access_log_middleware.py  observability.py
app/data/: asset_cache.py  machine_cost.py  sop_flows.py  zone_mapping.py
app/models/: __init__.py  base.py  contact.py  host.py  knowledge.py  op_log.py  user.py  workorder.py  yunxiao.py  zone_snapshot.py
app/routers/: __init__.py  ai.py  auth.py  contacts.py  cost.py  hosts.py  wecom.py  (+5 more)
backup/: backup.sh  restore.sh
nginx/: default.conf
scripts/: api_sniff_result.json  deploy_cloud_linux.sh  deploy_cloud_windows.ps1  deploy_windows.bat  diagnose_yunxiao.py  env_template.txt  find_tcum_api.py  generate_code_context.py  healthcheck.sh  import_contacts.py  import_knowledge.py  init_users.py  install-hooks.sh  open_firewall.bat  poc_yunxiao_api.py  pre-commit-check.sh  refresh_sessions.py  restart.sh  sniff_apis.py  sniff_inventory.py  sniff_login_page.py  sniff_passport_page.py  start.sh  start_windows.bat  stop.sh  test_cas_ioa.py  test_fusion_real.py  test_headless_login.py  test_tcum_browser.py
tests/: conftest.py  test_agent_guard.py  test_api_hosts.py  test_browser_session.py  test_cache_service.py  test_ccdb_browser.py  test_clients.py  test_cmdb_browser.py  test_harness_e2e.py  test_harness_middleware.py  test_host_service.py  test_idcrm_browser.py  test_parser.py  test_performance.py  test_tcum_browser.py  test_w3_features.py  test_water_level.py  test_wecom_bot_service.py  test_wecom_crypto.py  test_zone_instance_stats.py
web/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  zone-cards.yaml
(+94 files in other folders)
