[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tez-operator"
version = "0.3.0a0"
description = "TEZ 边缘可用区运营/运维内部工具平台"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "tez-ops team" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "apscheduler>=3.10",
    "openpyxl>=3.1",
    "alembic>=1.13",
    "tenacity>=8.3",
    "playwright>=1.45",
    "cryptography>=42.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "fakeredis>=2.21",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "C4"]
ignore = [
    "S101",   # allow assert in tests
    "B008",   # FastAPI 范式 Depends(...) 必须在参数默认值中调用
    "S110",   # try-except-pass：cleanup 路径可接受静默
    "S112",   # try-except-continue：history 解析容错可接受
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -m 'not slow'"
markers = [
    "slow: 慢速 / 性能基准测试，CI 默认跳过；显式 -m slow 才跑",
]

[tool.coverage.run]
source = ["app"]
omit = ["alembic/*"]
